--- a/model1.ipynb
+++ b/model1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 1,
    "metadata": {
     "id": "R4FkLNHBv_d4"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -146,7 +146,7 @@
        "4     CrazyHan  Completed Race 4 Life in 58mins with girlies f...  "
       ]
      },
-     "execution_count": 390,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 3,
    "metadata": {
     "id": "OHPG20asv_eY"
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 4,
    "metadata": {
     "id": "z3MOkeo2v_fE"
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 7,
    "metadata": {
     "id": "m02cQIfQv_gE"
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,27 +368,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                                   [194640]\n",
-       "1          [860, 4915, 18, 114, 3405, 12, 1548, 26, 202, ...\n",
-       "2          [4, 32137, 333, 50419, 276, 46, 973, 1, 181, 630]\n",
-       "3                                              [34359, 1064]\n",
-       "4          [3234, 1366, 159, 186, 10, 194641, 23, 5710, 5...\n",
-       "                                 ...                        \n",
-       "1279995    [138603, 141, 5444, 7, 541, 86, 1, 44, 16, 34,...\n",
-       "1279996                                       [9, 424, 3006]\n",
-       "1279997    [186222, 18, 126, 2, 288, 63, 46, 322, 16, 12,...\n",
-       "1279998    [589806, 8, 19, 193, 53, 8, 146, 19389, 9, 4, ...\n",
-       "1279999                [1, 142, 333, 5072, 1, 153, 2684, 12]\n",
-       "Name: text, Length: 1280000, dtype: object"
+       "0                                                  [16916]\n",
+       "1        [873, 4516, 18, 112, 2751, 12, 1510, 26, 192, ...\n",
+       "2        [4, 16919, 315, 16920, 294, 46, 1037, 1, 202, ...\n",
+       "3                                            [16921, 1135]\n",
+       "4        [3860, 1267, 154, 177, 10, 16922, 23, 5502, 54...\n",
+       "                               ...                        \n",
+       "49995               [3904, 214, 190, 1478, 163, 1198, 106]\n",
+       "49996    [58980, 87, 77, 1, 20, 26, 478, 18, 22, 2140, ...\n",
+       "49997    [1, 129, 107, 651, 15, 154, 210, 14, 117, 225,...\n",
+       "49998          [13382, 8, 7, 2659, 881, 3404, 19, 8, 2764]\n",
+       "49999                      [58981, 166, 8, 11, 139, 4, 98]\n",
+       "Name: text, Length: 50000, dtype: object"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
      "output_type": "stream",
      "text": [
       "Model1(\n",
-      "  (fc): Linear(in_features=119, out_features=1, bias=True)\n",
+      "  (fc): Linear(in_features=73, out_features=1, bias=True)\n",
       "  (sig): Sigmoid()\n",
       ")\n"
      ]
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,68 +644,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "32000it [00:22, 1399.44it/s]\n",
-      "32000it [00:23, 1365.66it/s]\n",
-      "32000it [00:23, 1342.82it/s]\n",
-      "32000it [00:24, 1313.17it/s]\n",
-      "32000it [00:24, 1307.42it/s]\n",
-      "32000it [00:24, 1311.78it/s]\n",
-      "32000it [00:24, 1300.98it/s]\n",
-      "32000it [00:25, 1254.17it/s]\n",
-      "32000it [00:29, 1099.85it/s]\n",
-      "32000it [00:28, 1110.42it/s]\n",
-      "32000it [00:28, 1127.42it/s]\n",
-      "32000it [00:28, 1130.89it/s]\n",
-      "32000it [00:28, 1110.74it/s]\n",
-      "32000it [00:28, 1111.94it/s]\n",
-      "32000it [00:28, 1111.19it/s]\n",
-      "32000it [00:28, 1125.60it/s]\n",
-      "32000it [00:28, 1124.25it/s]\n",
-      "32000it [00:29, 1092.32it/s]\n",
-      "32000it [00:29, 1097.89it/s]\n",
-      "32000it [00:29, 1102.13it/s]\n",
-      "32000it [00:28, 1116.30it/s]\n",
-      "32000it [00:28, 1112.10it/s]\n",
-      "32000it [00:28, 1109.03it/s]\n",
-      "32000it [00:28, 1114.39it/s]\n",
-      "32000it [00:28, 1114.47it/s]\n",
-      "32000it [00:28, 1103.77it/s]\n",
-      "32000it [00:28, 1122.55it/s]\n",
-      "32000it [00:29, 1100.58it/s]\n",
-      "32000it [00:28, 1112.78it/s]\n",
-      "32000it [00:28, 1103.71it/s]\n",
-      "32000it [00:28, 1111.53it/s]\n",
-      "32000it [00:28, 1106.58it/s]\n",
-      "32000it [00:28, 1108.16it/s]\n",
-      "32000it [00:28, 1107.52it/s]\n",
-      "32000it [00:28, 1112.62it/s]\n",
-      "32000it [00:28, 1106.19it/s]\n",
-      "32000it [00:28, 1109.89it/s]\n",
-      "32000it [00:28, 1110.46it/s]\n",
-      "32000it [00:29, 1101.69it/s]\n",
-      "32000it [00:28, 1107.29it/s]\n",
-      "32000it [00:29, 1081.74it/s]\n",
-      "32000it [00:28, 1110.99it/s]\n",
-      "32000it [00:28, 1128.66it/s]\n",
-      "32000it [00:27, 1146.38it/s]\n",
-      "32000it [03:56, 135.05it/s] \n",
-      "32000it [00:25, 1270.32it/s]\n",
-      "32000it [00:28, 1107.87it/s]\n",
-      "32000it [00:28, 1108.18it/s]\n",
-      "32000it [00:28, 1106.28it/s]\n",
-      "32000it [00:29, 1086.01it/s]\n"
+      "1250it [00:02, 503.62it/s]\n",
+      "1250it [00:02, 537.17it/s]\n",
+      "1250it [00:02, 532.61it/s]\n",
+      "1250it [00:02, 540.99it/s]\n",
+      "1250it [00:02, 533.21it/s]\n",
+      "1250it [00:02, 530.51it/s]\n",
+      "1250it [00:01, 692.29it/s]\n",
+      "1250it [00:01, 631.15it/s]\n",
+      "1250it [00:01, 755.81it/s]\n",
+      "1250it [00:01, 697.72it/s]\n",
+      "1250it [00:01, 710.97it/s]\n",
+      "1250it [00:01, 796.60it/s]\n",
+      "1250it [00:01, 746.82it/s]\n",
+      "1250it [00:01, 721.40it/s]\n",
+      "1250it [00:01, 745.68it/s]\n",
+      "1250it [00:01, 757.54it/s]\n",
+      "1250it [00:01, 708.48it/s]\n",
+      "1250it [00:01, 738.42it/s]\n",
+      "1250it [00:01, 798.99it/s]\n",
+      "1250it [00:01, 677.08it/s]\n",
+      "1250it [00:01, 702.79it/s]\n",
+      "1250it [00:01, 712.07it/s]\n",
+      "1250it [00:01, 639.75it/s]\n",
+      "1250it [00:01, 678.90it/s]\n",
+      "1250it [00:01, 801.77it/s]\n",
+      "1250it [00:01, 773.84it/s]\n",
+      "1250it [00:01, 739.16it/s]\n",
+      "1250it [00:01, 651.12it/s]\n",
+      "1250it [00:01, 698.70it/s]\n",
+      "1250it [00:01, 735.21it/s]\n",
+      "1250it [00:02, 582.80it/s]\n",
+      "1250it [00:02, 601.57it/s]\n",
+      "1250it [00:01, 699.29it/s]\n",
+      "1250it [00:02, 603.48it/s]\n",
+      "1250it [00:01, 700.66it/s]\n",
+      "1250it [00:01, 726.45it/s]\n",
+      "1250it [00:01, 714.33it/s]\n",
+      "1250it [00:01, 674.22it/s]\n",
+      "1250it [00:01, 688.55it/s]\n",
+      "1250it [00:02, 605.72it/s]\n",
+      "1250it [00:01, 799.03it/s]\n",
+      "1250it [00:01, 660.66it/s]\n",
+      "1250it [00:02, 624.15it/s]\n",
+      "1250it [00:01, 690.17it/s]\n",
+      "1250it [00:01, 707.34it/s]\n",
+      "1250it [00:01, 760.95it/s]\n",
+      "1250it [00:01, 778.57it/s]\n",
+      "1250it [00:01, 668.81it/s]\n",
+      "1250it [00:01, 730.64it/s]\n",
+      "1250it [00:02, 569.29it/s]\n"
      ]
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
     "\n",
     "num_epochs = 50\n",
     "\n",
@@ -748,14 +747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[49.952441406249655, 49.95244140625021, 49.952441406249726, 49.95244140624972, 49.95244140624968, 49.95244140624991, 49.95244140624968, 49.95244140624981, 49.952441406250195, 49.952441406249655, 49.95244140625012, 49.95244140624992, 49.95244140624985, 49.95244140625006, 49.95244140624995, 49.95244140624992, 49.952441406250074, 49.95244140625004, 49.952441406250024, 49.95244140625006, 49.9524414062498, 49.95244140625003, 49.952441406250095, 49.95244140624995, 49.95244140625011, 49.95244140624995, 49.95244140624979, 49.952441406250365, 49.9524414062503, 49.95244140624983, 49.952441406249875, 49.95244140625035, 49.952441406250244, 49.95244140625009, 49.95244140624988, 49.952441406250045, 49.95244140625014, 49.952441406250045, 49.95244140624972, 49.95244140624983, 49.952441406249974, 49.952441406250145, 49.952441406249854, 49.952441406250294, 49.952441406250074, 49.952441406249505, 49.952441406250095, 49.9524414062499, 49.952441406249854, 49.95244140625009]\n"
+      "[49.52750000000004, 49.52750000000001, 49.52749999999996, 49.527499999999954, 49.527500000000025, 49.52750000000004, 49.52749999999997, 49.527499999999996, 49.52750000000006, 49.52750000000003, 49.52750000000001, 49.527499999999996, 49.527499999999996, 49.52749999999995, 49.52750000000004, 49.52749999999999, 49.52750000000002, 49.52750000000001, 49.527499999999996, 49.527499999999925, 49.52749999999997, 49.527499999999975, 49.5275, 49.52750000000004, 49.527499999999996, 49.52750000000003, 49.52750000000002, 49.527500000000074, 49.52749999999993, 49.527499999999996, 49.52749999999995, 49.527499999999975, 49.5275, 49.52750000000002, 49.527500000000025, 49.52749999999994, 49.52749999999996, 49.527499999999975, 49.527499999999996, 49.52749999999997, 49.527499999999975, 49.52749999999999, 49.527500000000025, 49.52749999999997, 49.52749999999999, 49.52749999999993, 49.52749999999995, 49.5275, 49.527499999999975, 49.52750000000004]\n"
      ]
     }
    ],
@@ -765,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.48858447833871343, 0.49075259127654053, 0.4928168434780087, 0.49640740413498297, 0.5004110684059596, 0.5004999989084924, 0.50049999860674, 0.5004999981587775, 0.5004999959562074, 0.5004999943152052, 0.5004013557033564, 0.49844354333635443, 0.49700209361361214, 0.5001009447239321, 0.4995107389180896, 0.49956578909000626, 0.4990217291382119, 0.49958791788062307, 0.500020136715376, 0.49841186832310536, 0.4987901349938466, 0.4998729211436594, 0.4994963711537407, 0.4992566777402534, 0.4997555513870884, 0.49929302887758287, 0.4982258266801959, 0.499344069693236, 0.4992588027045134, 0.49822243971983127, 0.49846446063089983, 0.4985831323545414, 0.4991029941919239, 0.4981015524761762, 0.4989248820347739, 0.5004273619567977, 0.4981387082841249, 0.49955207099672344, 0.4986564508969873, 0.49968907251022743, 0.4994264059653498, 0.4996543103614839, 0.49814619185868597, 0.4983540568193412, 0.49819209470506975, 0.49814723806129596, 0.49797411802876745, 0.49791086177854027, 0.49784772854158577, 0.4981089231325323]\n"
+      "[0.4955268040060998, 0.4900342797994614, 0.4927634692788127, 0.49257207876443865, 0.49739585697650945, 0.49630328817367625, 0.49312547192573614, 0.4844312515139576, 0.4845646437048913, 0.48331157603263863, 0.48213051087856273, 0.48522799395322785, 0.48742447457313565, 0.4878999354958533, 0.48703286358118064, 0.48486076668500927, 0.4836996166229243, 0.48810735704898806, 0.48952973750829665, 0.4844412476062772, 0.4820624444007879, 0.48140893206596364, 0.48038919258117646, 0.482888132500648, 0.4858780835032456, 0.48968825011253336, 0.49014489669799827, 0.49000135726928695, 0.49187251852750785, 0.49287343341112094, 0.4901151842474946, 0.48796904115676953, 0.48550836976766637, 0.4855435858011246, 0.4886724588036531, 0.4883618970990176, 0.48862697075605405, 0.4870296754240994, 0.4928545437932014, 0.49479701517820374, 0.49396549699306513, 0.4941872516155243, 0.4950650214910509, 0.489362332355976, 0.4880467644810679, 0.48932889599800117, 0.4862655196905136, 0.488326912605762, 0.49286324059963194, 0.4930849447846411]\n"
      ]
     }
    ],
@@ -789,14 +788,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8000it [00:03, 2089.45it/s]\n"
+      "313it [00:00, 1366.16it/s]\n"
      ]
     }
    ],
@@ -814,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,16 +825,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49.95234375"
+       "49.530750798722046"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
