--- a/model4.ipynb
+++ b/model4.ipynb
@@ -66,7 +66,7 @@
         "import pandas as pd \n",
         "from pandas import DataFrame, read_csv"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "df = pd.DataFrame(data=twitterData)\n",
         "df.head(5)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +228,7 @@
         "df['target'].replace({4: 1}, inplace = True)\n",
         "df.head(5)"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +332,7 @@
         "    x = re.sub(r'[^\\w]+', \" \", x)\n",
         "    return x"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
       "source": [
         "df['text'] = df['text'].apply(lambda x: RemoveSpecialCharacters(x) )"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +367,7 @@
         "\n",
         "df['text'] = df['text'].apply(lambda x: WordNetLemmatizer().lemmatize(x))"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
       "source": [
         "df['text'] = df['text'].apply(lambda x: x.lower())"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "source": [
         "df.head(5)"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
         "from torchtext.vocab import GloVe\n",
         "glove = GloVe(name='twitter.27B', dim=25)"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -509,14 +509,11 @@
         "text_field = Field(sequential=True,tokenize='spacy',fix_length=100)\n",
         "\n",
         "label_field = Field(sequential=False, use_vocab=False)\n",
-        "# sadly have to apply preprocess manually\n",
-        "preprocessed_text = df['text'].apply(lambda x: text_field.preprocess(x))\n",
-        "# load fastext simple embedding with 50d\n",
-        "text_field.build_vocab(preprocessed_text, vectors=glove)\n",
-        "# get the vocab instance\n",
-        "vocab = text_field.vocab\n"
+        "preprocessed_text = df['text'].apply(lambda x: text_field.preprocess(x)) #apply preprocess manually\n",
+        "text_field.build_vocab(preprocessed_text, vectors=glove)  # load embedding with 25d\n",
+        "vocab = text_field.vocab  # get the vocab instance"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +539,7 @@
         "                                               for i, r in df.iterrows()],\n",
         "                                               fields = fields).split(split_ratio = [0.8, 0.1, 0.1])"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +548,8 @@
         "id": "F9sqYkzgSUJm"
       },
       "source": [
-        "## Batching sentences together "
+        "## Batching sentences together \n",
+        "Use *BucketIterator* to create the batches for the 3 datasets with batch size 64."
       ]
     },
     {
@@ -564,7 +562,7 @@
         "train_iter, valid_iter, test_iter = BucketIterator.splits(datasets=(train_dataset, valid_dataset, test_dataset),\n",
         "                                                          batch_sizes=(64,64,64), sort=False)"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -586,7 +584,7 @@
         "import torch.nn as nn\n",
         "import numpy as np"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +611,7 @@
         "        out = self.sigmoid(out)\n",
         "        return out"
       ],
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +635,7 @@
         "   \n",
         "        return loss.item()"
       ],
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,7 +650,7 @@
         "\n",
         "  return loss.item()\n"
       ],
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +663,7 @@
         "    outputs = model(X)\n",
         "    return torch.round(outputs)"
       ],
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,10 +684,10 @@
       "source": [
         "net = Model_4(100,vocab.vectors)  # length is 100, given in Field\n",
         "learning_rate = 0.0001\n",
-        "loss_function=nn.MSELoss()\n",
+        "loss_function=nn.BCELoss()\n",
         "optimizer = torch.optim.RMSprop(net.parameters(), lr=learning_rate)"
       ],
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +722,7 @@
         "    valid_losses.append(np.mean(epoch_losses))\n",
         "       "
       ],
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +768,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -827,7 +825,7 @@
         "    precision.append(prec)\n",
         "    "
       ],
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +852,7 @@
         "print(\"Recall-score: \",np.mean(recall))\n",
         "print(\"Precision: \",np.mean(precision))"
       ],
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,6 +864,38 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ILDXl02Rl9c0"
+      },
+      "source": [
+        "# **Remarks**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ICYMgJqXmDlE"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "*   For this model we used GloVe for the pre-process, with vector size 25. RMS was chosen as an optimizer and BCELoss as loss function, because of the binary classification.\n",
+        "*   For neural network architecture:\n",
+        "\n",
+        "> * The first layer is an Embedding layer, which matches the input vectors to the vocabulary vectors.\n",
+        "> * The second layer is a Linear hidden layer,which accepts as input size, the size of the features multiplied by the size of the GloVe vectors. It uses ReLU as activation function.\n",
+        ">* The output layer is Linear with input dimension  200 and output 1 with sigmoid as activation function.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
