--- a/model4.ipynb
+++ b/model4.ipynb
@@ -897,6 +897,28 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ItgHWhmHOHNz"
+      },
+      "source": [
+        "## References"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aFC-MQOGOKd8"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "*   https://towardsdatascience.com/deep-learning-for-nlp-with-pytorch-and-torchtext-4f92d69052f\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
